# ganglion

./: .dockerignore  .env.example  .gitignore  .mcp.json  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
archive/composition/: prompt.py
archive/compute/: __init__.py  job_manager.py
archive/compute/backends/: __init__.py  registry.py  ssh.py
archive/mcp/: __init__.py  client.py  roles.py
archive/orchestration/: orchestrator.py  task_context.py
archive/runtime/: __init__.py
archive/state/: __init__.py
docs/: claude-code-setup.md  openclaw-guide.md
docs/plans/: mcp-multi-role-usage-tracking.md
examples/synth-city/: Dockerfile.runpod  config.py  handler.py  roles.json  subnet_conflict.py
examples/synth-city/agents/: forecaster.py
examples/synth-city/skill/: SKILL.md
examples/synth-city/synth_market_data_server/: __init__.py  __main__.py
examples/synth-city/tools/: backtest.py  estimate_volatility.py  fetch_historical_prices.py  fetch_price.py  run_experiment.py  score_paths.py
exports/: knowledge_format.md  schema.sql  sn50_config.json  system_prompt_rules.md  validation_rules.md
exports/tool_examples/: score_paths.py
skills/codebase-guide/: SKILL.md
skills/codebase-guide/examples/: common-workflows.md  sample-requests.md
skills/codebase-guide/references/: commands.md  configuration.md  operations.md  troubleshooting.md
skills/codebase-guide/scripts/: healthcheck.sh
skills/ganglion/: SKILL.md
skills/ganglion-synth-city/: SKILL.md
src/ganglion/: __init__.py  __main__.py  config.py
src/ganglion/acp/: __init__.py  client.py  config.py  errors.py  server.py
src/ganglion/agents/: __init__.py  ralph.py  ralph_tools.py
src/ganglion/bridge/: server.py
src/ganglion/composition/: __init__.py  base_agent.py  prompt.py  tool_registry.py  tool_returns.py
src/ganglion/compute/: __init__.py  artifacts.py  artifacts_s3.py  job_manager.py  mcp_tools.py  protocol.py  router.py
src/ganglion/knowledge/: __init__.py  store.py  types.py
src/ganglion/mcp/: __init__.py  client.py  config.py  errors.py  server.py  tools.py  usage.py
src/ganglion/orchestration/: __init__.py  errors.py  events.py  orchestrator.py  pipeline.py  task_context.py
src/ganglion/policies/: __init__.py  meta.py  presets.py  retry.py  stall.py
src/ganglion/runtime/: __init__.py  agent.py  coerce.py  llm_client.py  types.py
src/ganglion/state/: agent_registry.py  framework_state.py  (+3 more)
tests/: test_acp.py  test_artifacts_s3.py  test_bridge.py  test_cli.py  test_composition.py  test_compute.py  test_config.py  test_framework_state.py  test_knowledge.py  test_llm_client.py  test_mcp.py  test_orchestration.py  test_orchestrator.py  test_policies.py  test_runtime.py  test_state.py  test_templates.py
(+12 files in other folders)
