[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ganglion"
version = "0.1.0"
description = "Domain-specific execution engine for Bittensor subnet mining"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
ganglion = "ganglion.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ganglion"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
